--- a/style.css
+++ b/style.css
@@ -99,4 +99,15 @@
   transform: translateY(0);
 }
 
+/*Hide the white border plus scrollbars*/
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden; 
+}
+
+/* Make sure the canvas fills the screen */
+canvas {
+  display: block; 
+} 
 
