--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@
 /* https://wdexplorer.com/20-examples-beautiful-css-typography-design/ */
 #smileQuestionSpan {
     color: #ffffff;
-    font-family: 'Lato', sans-serif;
-    font-size: 20px;
+    font-family: 'Congenial', sans-serif;
+    font-size: 1.5em;
     font-weight: 300;
     text-shadow: 1px 2px 2px rgb(153, 101, 153);
 }
@@ -36,7 +36,7 @@
 #smileQuestionAnswersFieldHeader, #lastQuestionAnswerFieldHeader {
     color: rgb(39, 39, 39);
     background-color: rgba(223, 223, 223, 0.918);
-    font-family: 'Lato', sans-serif;
+    font-family: 'Congenial', sans-serif;
     font-size: 20px;
     font-weight: 300;
     border-radius: 3px;
@@ -45,7 +45,7 @@
 
 #smileQuestionAnswersField, #lastQuestionAnswerField {
     color: rgb(255, 255, 255);
-    font-family: 'Lato', sans-serif;
+    font-family: 'Congenial', sans-serif;
     font-size: 15px;
     font-weight: 300;
     text-shadow: 1px 2px 2px rgb(63, 42, 121);
@@ -62,7 +62,7 @@
   color: rgba(0, 0, 0, 0.85);
   cursor: pointer;
   display: inline-flex;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Congenial', sans-serif;
   font-size: 16px;
   font-weight: 600;
   justify-content: center;
@@ -99,15 +99,13 @@
   transform: translateY(0);
 }
 
-/*Hide the white border plus scrollbars*/
+/* Hide the white border plus scrollbars
 body {
   margin: 0;
   padding: 0;
   overflow: hidden; 
+  width: 100%; 
+  height: 100%;
 }
 
-/* Make sure the canvas fills the screen */
-canvas {
-  display: block; 
-} 
 
