--- a/style.css
+++ b/style.css
@@ -99,6 +99,33 @@
   transform: translateY(0);
 }
 
+
+ text {
+  font-size: large;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  
+};
+
+container {
+  background-image: url('bg-test-1.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: relative;
+  margin:0;
+  display:flex; 
+
+  justify-content: center;
+
+  align-items: center;
+}
+
+
+
+
+
 /* Hide the white border plus scrollbars
 body {
   margin: 0;
