--- a/style.css
+++ b/style.css
@@ -122,6 +122,28 @@ container {
   align-items: center;
 }
 
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
+.button-center {
+  position: absolute;
+  top: 95%;
+  left: 55%;
+  font-size: 2em;
+  border-radius: 8px;
+  border-color: #afafaf15;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: #535353;
+}
+
+h1 {
+  font-size: 10em;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: #535353;
+}
 
 
 
