--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
     text-shadow: 1px 2px 2px rgb(153, 101, 153);
 }
 
-#smileQuestionInput {
+#smileQuestionSpeechInput {
     font-family: 'Lato', sans-serif;
     font-size: 15px;
     font-weight: 300;
